# GATR2-Electronics

./: .clang-format  .gitignore  README.md
.github/workflows/: ci.yaml
brain/: README.md
bringup/: README.md
bringup/rs485_link/: README.md  brain_main.cpp  pi_transmit.py
common/: frame_codec.cpp  frame_codec.h  frames.h
common/tests/: CMakeLists.txt  frame_codec_gtest.cpp  frames_gtest.cpp
docs/: README.md  hardware.md  interfaces.md  pi_setup.md
pcb/: README.md
pi/: README.md
pico/: README.md  platformio.ini
pico/src/: config.h  imu.cpp  imu.h  main.cpp  quadrature.cpp  quadrature.h
tests/: README.md
